
2009-04-19 (dazjorz)
 * Implemented templates support using Smarty in comments.php. More to come.
 * Made *some queries* in comments.php, header.php SQL injection-safe.
 * Fixed an isset/empty issue when adding new LikeBack comment remarks.
 * Modified the e-mail sent to the user (see the Smarty template).
 * Added output buffering in header.php so header() calls work correctly.
 * Added LIKEBACK_PROJECT and LIKEBACK_VERSION to the configuration.
 * Fixed placeholder handling when the replaced string contains a question
 mark, and added warnings if the args string has a wrong number of elements.
 * Added argument === false check in db_fetch_object so failed queries work
 correctly.
 * Made send.php use the new escaping mechanism too.
 * Made send.php use the Smarty templating system too, and added a comment
 e-mail template.
 * Added some more descriptive error codes to send.php.
 * Made the locale, window, context and email arguments optional.
 * Added LIKEBACK_PRODUCTION configuration option to not emit warnings, and
 enabled full error reporting if it's disabled.
 * On comments page, added status message and type message next to the icons.
 * Removed e-mail links, developers should respond using the form.
 * Added functions for retrieving messages and icons belonging to statuses and
 types.
 * Fixed charset encoding issues
 * Fixed word wrapping in e-mails.
 * Fixed some warnings
 * Fixed comments and their remarks being displayed correctly when they had
 newlines in them.
 * Removed STRICT error reporting, it sucks.
 * Switched the order of remarks (now the newest is at the bottom).

2009-04-18 (dazjorz)
 * Initial import from Likeback backend on the kmess.org webserver.
 * Added license notes and some more info to all files
 * Removed $debug option from db_query and added global LIKEBACK_DEBUG
 constant
 * Made db.php die() if the database type was unknown
 * Added placeholder handling in db_query in preparation for *many* SQL
 injection bug fixes